# liburiparser-gobject

./: .editorconfig  README.md  meson.build  meson_options.txt
.github/workflows/: tests.yml
demo/: config.h.in  demo.gresources.xml  meson.build  propertypair.c  propertypair.h  tk.thatlittlegit.liburiparser-gobject-demo.json  wizard.c  wizard.ui
demo/po/: POTFILES  fr.po  meson.build  uri-wizard.pot
docs/: fdl-1.3.xml  lgpl-3.0.xml  liburiparser-gobject-sections.txt  liburiparser-gobject.types  liburiparser-gobject.xml  meson.build
src/: liburiparser-gobject-version.c  liburiparser-gobject-version.h.in  liburiparser-gobject.h  meson.build  upgerror.c  upgerror.h  upguri.c  upguri.h
tests/: common.c  common.h  comparison.test.c  copy.test.c  fragments.test.c  hierarchy.test.c  meson.build  parser.test.c  port.test.c  references.test.c  schemes.test.c  tests.json  userinfo.test.c
